--- a/index.html
+++ b/index.html
@@ -1,149 +1,253 @@
 <!DOCTYPE HTML>
 <!--
-	Multiverse by HTML5 UP
+	Arcana by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Photobugger's Gallery</title>
+		<title>L.L.P</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<div id="page-wrapper">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<!-- Header -->
+				<div id="header">
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html"><strong>Photobugger's</strong> Gallery</a></h1>
-						<nav>
+					<!-- Logo -->
+						<h1><a href="index.html" id="logo">Lucknow Legal Practices</a></h1>
+
+					<!-- Nav -->
+						<nav id="nav">
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li class="current"><a href="index.html">Home</a></li>
+								<!-- <li>
+									<a href="#">Dropdown</a>
+									<ul>
+										<li><a href="#">Lorem dolor</a></li>
+										<li><a href="#">Magna phasellus</a></li>
+										<li><a href="#">Etiam sed tempus</a></li>
+										<li>
+											<a href="#">Submenu</a>
+											<ul>
+												<li><a href="#">Lorem dolor</a></li>
+												<li><a href="#">Phasellus magna</a></li>
+												<li><a href="#">Magna phasellus</a></li>
+												<li><a href="#">Etiam nisl</a></li>
+												<li><a href="#">Veroeros feugiat</a></li>
+											</ul>
+										</li>
+										<li><a href="#">Veroeros feugiat</a></li>
+									</ul>
+								</li>
+								<li><a href="left-sidebar.html">About Us</a></li>
+								<li><a href="right-sidebar.html">Our Mission</a></li>
+								<li><a href="two-sidebar.html">Updates</a></li>
+								<li><a href="no-sidebar.html">Join Us</a></li> -->
 							</ul>
 						</nav>
-					</header>
 
-				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Autumn</h2>
-							<p>Learn to let go from Autumn and believe in new begining.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>WeekEnds</h2>
-							<p>Nature is always the best refuel for humans.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Travel</h2>
-							<p>It's worth a visit to see one of the 7 wonders.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Tourism</h2>
-							<p>Atithi Devo Bhavaha!</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Food</h2>
-							<p>What's life without a good food?</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Innocence</h2>
-							<p>We should always keep the kid inside us alive.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Morning Walks</h2>
-							<p>Never miss to kiss the sunrise.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Fog</h2>
-							<p>Don't be too lazy to miss the fun in the fog.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Sugar Candy</h2>
-							<p>This is the best to test your resistance.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Glitter of the Earth</h2>
-							<p>So close, yet so far! So bright, yet so bruised!</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Uno Cards</h2>
-							<p>The best group game to bond for.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Got the splash</h2>
-							<p>Always remember to experiment in your life. Who knows, what could happen next.</p>
-						</article>
+				</div>
+
+			<!-- Banner -->
+				<section id="banner">
+					<h1><a href="index.html" class="image"><img src="images/LLPlogo.png" width="350" height="250" /></a></h1>
+					<!-- <header>
+						<h2>LLP: <em>A Legal firm to fight for your rights!!!</em></h2>
+					</header> -->
+				</section>
+
+			<!-- Highlights -->
+				<section class="wrapper style1">
+					<div class="container">
+						<div class="row gtr-200">
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<a href="#" class="image tropical"><img src="images/pic_expertise.jpeg" width="100" height="100" alt="Expertise" /></a>									
+									<!-- <i class="icon solid major fa-paper-plane"></i> -->
+									<h3>Expertise</h3>
+									<p><strong>Facilitating legal solutions</strong><br>Our expertise across diverse practice areas and sectors covers varied fields. Our legal experience, delighted clients from across the globe, and topical and specialised services, we deliver the best legal solutions for our clients.</p>
+								</div>
+							</section>
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<a href="#" class="image tropical"><img src="images/pic_people.jpeg" width="100" height="100" alt="People" /></a>
+									<!-- <i class="icon solid major fa-pencil-alt"></i> -->
+									<h3>People</h3>
+									<p><strong>Home to inspired performances</strong><br>Leaders and professionals at Lucknow Legal Practices excel at what they do. Each member of our team is equipped and empowered to deliver exceptional service. Apart from advising clients domestically and globally, we believe in holistic development of our people for the evolution of the Indian legal profession and community.</p>
+								</div>
+							</section>
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<a href="#" class="image topical"><img src="images/pic_work.jpeg" width="100" height="100" alt="Work" /></a>
+									<!-- <i class="icon solid major fa-wrench"></i> -->
+									<h3>Work</h3>
+									<p><strong>Execution</strong><br>We delve into every detail before offering strategic advice, and in this, our execution is unparalleled.</p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</section>
+
+			<!-- Gigantic Heading -->
+				<section class="wrapper style2">
+					<div class="container">
+						<header class="major">
+							<h2>About Us</h2>
+							<p>Founded in 2016, the Firm’s clear and singular purpose is to provide reliable, practical and full-service advice across sectors. Our greatest strength is an in-depth understanding of legal, regulatory, in India and elsewhere.</p>
+						</header>
+					</div>
+				</section>
+
+			<!-- Posts -->
+				<section class="wrapper style1">
+					<div class="container">
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Directors</h3>
+										<p><strong>Gibran Akhtar Khan</strong><br>Advocate LL.B., P.G.D.P.E.L.<br><strong>Mohd. Asmar Ansari</strong><br>Advocate LL.B., LL.M.</p>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Advocacy</h3>
+										<p>Accountability, fairness and transparency are the pillars of good governance and are drivers for our increased participation in public policy initiatives.</p>
+									</div>
+								</div>
+							</section>
+						</div>
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Engagements with Departments</h3>
+										<p>Ircon International Limited, National Highways Authority of India, Pension Fund Regulatory and Development Authority, Fiable Building Solutions Pvt. Ltd., Trygve Engineering Pvt. Ltd., ORN Clothing Pvt. Ltd.</p>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Pro Bono engagements</h3>
+										<p>Socially conscious with a strong sense of responsibility, Lucknow Legal Practices has always supported charitable organisations, not-for-profits, social enterprises and multiple bottom-line companies.</p>
+									</div>
+								</div>
+							</section>
+						</div>
+					</div>
+				</section>
+
+			
+			<!-- Footer -->
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+							<section class="col-4 col-10-narrower col-10-mobilep">
+								<h3>Office Address</h3>
+								<p id="p0">Flat No. 2, 1st Floor, S.A. Tower, Near Rahim Nagar Chauraha, Lucknow-226006.</p>
+								<h4>Contacts</h4>
+								<p id="p0">(M) 9838525761, 8447367632<br>lucknowlegalpractices@outlook.com</p>
+								<!-- <p>Email: lucknowlegalpractices@outlook.com</p> -->
+								<!-- <h3>Office Address</h3>
+								<ul class="links">
+									<li><a href="#">Mattis et quis rutrum</a></li>
+									<li><a href="#">Suspendisse amet varius</a></li>
+									<li><a href="#">Sed et dapibus quis</a></li>
+									<li><a href="#">Rutrum accumsan dolor</a></li>
+									<li><a href="#">Mattis rutrum accumsan</a></li>
+									<li><a href="#">Suspendisse varius nibh</a></li>
+									<li><a href="#">Sed et dapibus mattis</a></li>
+								</ul> -->
+							</section>
+							<!-- <section class="col-3 col-6-narrower col-12-mobilep">
+								<h3>More Links to Stuff</h3>
+								<ul class="links">
+									<li><a href="#">Duis neque nisi dapibus</a></li>
+									<li><a href="#">Sed et dapibus quis</a></li>
+									<li><a href="#">Rutrum accumsan sed</a></li>
+									<li><a href="#">Mattis et sed accumsan</a></li>
+									<li><a href="#">Duis neque nisi sed</a></li>
+									<li><a href="#">Sed et dapibus quis</a></li>
+									<li><a href="#">Rutrum amet varius</a></li>
+								</ul>
+							</section> -->
+							<section class="col-4 col-10-narrower">
+								<h3>For Appointment & Online Consultation</h3>
+								<a href="mailto:lucknowlegalpractices@outlook.com">Click here</a>
+								<!-- <form action="mail.php" method="post">
+									<div class="row gtr-50">
+										<div class="col-6 col-12-mobilep">
+											<input type="text" name="name" placeholder="Name" required />
+										</div>
+										<div class="col-6 col-12-mobilep">
+											<input type="text" name="phone" placeholder="Contact Number" required />
+										</div>
+										<div class="col-12">
+											<input type="email" name="email" placeholder="Email" required />
+										</div>
+										<div class="col-12">
+											<textarea name="message" placeholder="Message" rows="5"></textarea>
+										</div>
+										<div class="col-12">
+											<ul class="actions">
+												<li><input type="submit" class="button alt" value="Send Message" /></li>
+											</ul>
+										</div>
+									</div>
+								</form> -->
+							</section>
+							<section class="col-4 col-13-narrower">
+								<h3>Directors</h3>
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<div class="inner">
+										<p><strong>Gibran Akhtar Khan</strong><br>Advocate<br>LL.B., P.G.D.P.E.L.</p>
+									</div>
+								</div>
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<div class="inner">
+										<p><strong>Mohd. Asmar Ansari</strong><br>Advocate<br>LL.B., LL.M.</p>
+									</div>
+								</div>
+							</section>
+						</div>
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer" class="panel">
-						<div class="inner split">
-							<div>
-								<section>
-									<h2>Shower some love</h2>
-									<p>We promise to keep you mesmerised with our clicks. Your appriciations, love and support are our fuel, so, we request you to please keep refueling us up for more and better content. Thank you!!!</p>
-								</section>
-								<section>
-									<h2>Follow us on ...</h2>
-									<ul class="icons">
-										<li><a href="https://twitter.com/Azram92463450" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.facebook.com/photobuggers/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/photobuggers/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://github.com/4zram" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="https://www.linkedin.com/in/azram-ansari-130712105/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									</ul>
-								</section>
-								<p class="copyright">
-									&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.
-								</p>
-							</div>
-							<div>
-								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-							</div>
-						</div>
-					</footer>
+					<!-- Icons -->
+						<ul class="icons">
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="image tropical"><img src="images/pic_location.jpg" width="20" height="20" alt="Location" /></a></li>
+						</ul>
 
-			</div>
+					<!-- Copyright -->
+						<!-- <div class="copyright">
+							<ul class="menu">
+								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div> -->
+
+				</div>
+
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
