added globe icon
Added Globe icon

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="image tropical"><img src="images/pic_location.jpg" width="20" height="20" alt="Location" /></a></li>
+							<li><a href="#" class="fa fa-globe"><span class="label"></span></a></li>
 						</ul>
 
 					<!-- Copyright -->
