--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="fa fa-globe"><span class="label"></span></a></li>
+							<li><a href="https://www.google.co.in/maps/place/LUCKNOW+LEGAL+PRACTICES/@26.8850767,80.9590192,17z/data=!3m1!4b1!4m5!3m4!1s0x39995739bf5fc2dd:0xe51a57db75d7163b!8m2!3d26.8851121!4d80.9612492?hl=en-GB" class="fa fa-globe"><span class="label"></span></a></li>
 						</ul>
 
 					<!-- Copyright -->
